<resources>
    <string name="app_name">Annur2App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agenda_terdekat">Agenda Terdekat</string>
    <string name="umum">Umum</string>
    <string name="artikel_terbaru">Artikel Terbaru</string>
    <string name="tawassul">Tawassul</string>
    <string name="yasin_tahlil"><![CDATA[Yasin & Tahlil]]></string>
    <string name="al_waqiah">Al-Waqiah</string>
    <string name="birrul_walidain">Birrul Walidain</string>
    <string name="istighosah">Isitghosah</string>
    <string name="qasidah_burdah">Qasidah Burdah</string>
    <string name="maulid_diba">Maulid Diba\'</string>
    <string name="lainnya">Lainnya</string>
    <string name="desk_apk">Annur2App ©2024. Versi 3.0.0\nDikembangkan oleh Tim Pengembangan Annur2App.</string>
    <string name="b_tawassul">سَيِّدِنَا وَشَفِيْعِنَا وَحَبِيْبِنَا وَقُرَّةِ أَعْيُنِنَا مُحَمَّدٍ وَإِخْوَانِهِ مِنَ الْأَنْبِيَاءِ وَالْمُرْسَلِيْنَ صَلَوَاتُ اللَّهِ وَسَلَامُهُ عَلَيْهِمْ أَجْمَعِيْنَ ثُمَّ إِلَى حَضْرَةِ جَمِيْعِ الْخُلَفَاءِ الرَّاشِدِيْنَ أَبِيْ بَكْرٍ وَعُمَرَ وَعُثْمَانَ وَعَلِيٍّ ثُمَّ إِلَى حَضْرَةِ عَبْدِ اللَّهِ بْنِ مَسْعُوْدٍ وَبَقِيَّةِ الصَّحَابَةِ رَضِيَ اللَّهُ تَعَالَى عَنْهُمْ أَجْمَعِيْنَ ... شَيْئٌ لِلَّهِ لَهُمُ الْفَاتِحَةِ\n
جَمِيْعِ الْعُلَمَاءِ وَالْأَوْلِيَاءِ وَالشُّهَدَاءِ وَالصَّالِحِيْنَ خُصُوْصًا سَيِّدِنَا الشَّيْخِ عَبْدِ الْقَادِرِ الْجَيْلَانِيْ وَسَائِرِ الْأَوْلِيَاءِ التِّسْعَةِ الَّذِيْنَ بَلَّغُوْا الدِّيْنَ بِبُلْدَتِنَا إِنْدُوْنِيْسِيَا هَذِهِ ثُمَّ الَّذِيْنَ يَلُوْنَهُمْ وَمَنْ بَعْدَهُمْ إِلَى يَوْمِ الدِّيْنِ ثُمَّ إِلَى حَضْرَةِ مُؤَسِّسِ مَعْهَدِ "النُّوْرِ" كِيَاهِيْ أَنْوَار نُوْر بُوْلُوْلَاوَاع وَإِلَى حَضْرَةِ الْقُطْبِ الزَّاهِدِ كِيَاهِيْ مُحَمَّد بَدْرُ الدِّيْن أَنْوَار الْحُسَيْنِيْ الْحَاجِ وَإِلَى حَضْرَةِ كِيَاهِيْ عَبْدِ الْحَمِيْد فَاسُوْرُوَان إِنَّ اللَّهَ يُعْلِيْ دَرَجَاتِهِمْ فِيْ الْجَنَّةِ وَيُعِيْنُنَا عَلَى ذِكْرِهِ وَشُكْرِهِ وَحُسْنِ عِبَادَتِهِ بِبَرَكَاتِهِمْ وَأَسْرَارِهِمْ وَإِنَّ اللَّهَ يُبَلِّغُنِا زِيَارَةَ الْحَرَمَيْنِ بِجَاهِهِمْ عِنْدَ اللَّهِ ... شَيْئٌ لِلَّهِ لَهُمُ الْفَاتِحَة\nِ
جَمِيْعِ أَسَاتِيْذِنَا وَمَشَايِخِنَا وَوَالِدِيْنَا وَأُمَّهَاتِنَا وَأَجْدَادِنَا وَجَدَّاتِنَا إِلَى نَبِيِّ اللَّهِ أَدَمَ وَحَوَاءَ وَإِلَى جَمِيْعِ مَنْ أَحْسَنَ إِلَيْنَا وَذَوِيْ الْحُقُوْقِ الْوَاجِبَاتِ عَلَيْنَا إِنَّ اللَّهَ يَتَغَشَّاهُمْ بِالرَّحْمَةِ وَالْمَغْفِرَةِ ... شَيْئٌ لِلَّهِ لَهُمُ الْفَاتِحَة\nِ
كُلُّ أَحَدٍ مِنْ هَذِهِ الْجَمْعِيَّةِ حَاضِرِهِمْ وَغَائِبِهِمْ (وَجَمِيْعِ مَنْ نَصَرَهَا وَ عَمَرَهَا) إِنَّ اللَّهَ يُوَسِّعُ لَهُمُ الرِّزْقَ الْحَلَالَ وَيُيَسِّرُ لَهُمْ أُمُورَ الدُّنْيَا وَالْآخِرَةِ ... شَيْئٌ لِلَّهِ لَهُمُ الْفَاتِحَة\nِ
سَيِّدِنَا سُلَيْمَانَ وَسَيِّدِنَا إِبْرَاهِيْمَ (عَلَى سَيِّدِنَا مُحَمَّدٍ وَعَلَيْهِمَا الصَّلَاةُ وَالسَّلَامُ) وَإِسْكَنْدَار ذِيْ الْقَرْنَيْنِ إِنَّ اللَّهَ يُؤْتِيْنَا بِبَرَكَاتِهِمْ رِزْقَ الْأَشْبَاحِ وَالْأَرْوَاحِ بِلَا نَصَبٍ وَلَا ضَيْرٍ وَلَا تَعَبٍ وَإِنَّ اللَّهَ يَقْضِيْ بِبَرَكَاتِهِمْ حَاجَاتِنَا وَيُطِيْلُ أَعْمَارَنَا فِيْ طَاعَةِ اللَّهِ مَعَ الصِّحَّةِ وَالْعَافِيَةِ وَيَخْتِمُ لَنَا بِالسَّعَادَةِ وَحُسْنِ الْخَاتِمَةِ ... شَيْئٌ لِلَّهِ لَهُمُ الْفَاتِحَةِ
</string>
    <string name="b_birrul">الْحَمْدُ لِلَّهِ الَّذِيْ أَمَرَنَا بِشُكْرِ الْوَالِدَيْنِ وَالْإِحْسَانِ إِلَيْهِمَا وَحَثَّنَا عَلَى اغْتِنَامِ بِرِّهِمَا وَاصْطِنَاعِ الْمَعْرُوْفِ لَدَيْهِمَا وَ نَدَبَنَا إِلَى خَفْضِ الْجَنَاحِ مِنَ الرَّحْمَةِ لَهُمَا إِعْظَامًا وَإِكْبَارًا وَأَوْصَانَا بِالتَّرَحُّمِ عَلَيْهِمَا كَمَا رَبَّيَانَا صِغَارًا. اللَّهُمَّ فَارْحَمْ وَالِدِيْنَا (3) وَاغْفِرْ لَهُمْ وَارْحَمْهُمْ وَارْضَ عَنْهُمْ رِضًا تُحِلُّ بِهِ عَلَيْهِمْ جَوَامِعَ رِضْوَانِكَ وَمَوَاطِنَ عَفْوِكَ وَغُفْرَانِكَ وَتُحِلُّهُمْ بِهِ دَارَ كَرَامَتِكَ وَأَمَانِكَ وَأَدِرَّ بِهِ عَلَيْهِمْ لَطَائِفَ بِرِّكَ وَإِحْسَانِكَ. اللَّهُمَّ اغْفِرْ لَهُمْ مَغْفِرَةً جَامِعَةً تَمْحُوْ بِهَا سَالِفَ أَوْزَارِهِمْ وَسَيِّئَ إِصْرَارِهِمْ وَارْحَمْهُمْ رَحْمَةً تُنِيْرُ لَهُمْ بِهَا الْمَضْجَعَ فِيْ قُبُوْرِهِمْ وَتُؤَمِّنُهُمْ بِهَا يَوْمَ الْفَزَعِ عِنْدَ نُشُوْرِهِمْ. اللَّهُمَّ تَحَنَّنْ عَلَى ضَعْفِهِمْ كَمَا كَانُوْا عَلَى ضَعْفِنَا مُتَحَنِّنِيْنَ وَارْحَمِ انْقِطَاعَهُمْ إِلَيْكَ كَمَا كَانُوْا فِيْ حَالِ انْقِطَاعِنَا إِلَيْهِمْ رَاحِمِيْنَ وَتَعَطَّفْ عَلَيْهِمْ كَمَا كَانُوْا عَلَيْنَا فِيْ حَالِ صِغَرِنَا مُتَعَطِّفِيْنَ. اللَّهُمَّ احْفَظْ لَهُمْ ذَلِكَ الْوُدَّ الَّذِيْ أَشْرَبْتَهُ قُلُوْبَهُمْ وَالْحَنَانَةَ الَّتِيْ مَلَأْتَ بِهَا صُدُوْرَهُمْ وَاللُّطْفَ الَّذِيْ شَغَّلْتَ بِهِ جَوَارِحَهُمْ وَاشْكُرْ لَهُمْ ذَلِكَ الْجِهَادَ الَّذِيْ كَانُوْا فِيْنَا مُجَاهِدِيْنَ،وَلَا تُضَيِّعْ لَهُمْ ذَلِكَ الْإِجْتِهَادَ الَّذِيْ كَانُوْا فِيْنَا مُجْتَهِدِيْنَ. وَجَازِهِمْ عَلَى ذَلِكَ السَّعْيِ الَّذِيْ كَانُوْا فِيْنَا سَاعِيْنَ وَالرَّعْيِ الَّذِيْ كَانُوْا فِيْنَا رَاعِيْنَ أَفْضَلَ مَا جَزَيْتَ بِهِ السُّعَاةَ الْمُصْلِحِيْنَ وَالرُّعَاةَ النَّاصِحِيْنَ. اللَّهُمَّ بِرَّهُمْ أَضْعَافَ مَا كَانُوْا يُبِرُّوْنَنَا وَانْظُرْ إِلَيْهِمْ بِعَيْنِ الرَّحْمَةِ كَمَا كَانُوْا يَنْظُرُوْنَنَا اللَّهُمَّ هَبْ لَهُمْ مَا ضَيَّعُوْا مِنْ حَقِّ رُبُوْبِيَّتِكَ فِيْمَا اشْتَغَلُوْا بِهِ فِيْ حَقِّ تَرْبِيَّتِنَا وَتَجَاوَزْ عَنْهُمْ مَا قَصَّرُوْا مِنْ حَقِّ خِدْمَتِكَ بِمَا آثَرُوْنَا فِيْهِ مِنْ حَقِ خِدْمَتِنَا وَاعْفُ عَنْهُمْ مَا ارْتَكَبُوْا مِنَ الشُّبُهُاتِ مِنْ أَجْلِ مَا اكْتَسَبُوْا مِنْ أَجْلِنَا. وَلَا تُؤَاخِذْهُمْ بِمَا دَعَتْهُمْ إِلَيْهِ الْحَمِيَّةُ مِنَ الْهَوَى لِمَا غَلَبَ عَلَى قُلُوْبِهِمْ مِنْ مَحَبَّتِنَا وَتَحَمَّلْ عَنْهُمُ الظَّلَامَاتِ الَّتِي ارْتَكَبُوْهَا فِيْمَا اجْتَرَحُوْا لَنَا وَسَعَوْا عَلَيْنَا وَالْطُفْ بِهِمْ فِيْ مَضَاجِعِ الْبَلَاءِ لُطْفًا يَّزِيْدُ عَلَى لُطْفِهِمْ فِيْ أَيَّامِ حَيَاتِهِمْ بِنَا. اللَّهُمَّ وَمَا هَدَيْتَنَا لَهُ مِنَ الطَّاعَاتِ وَيَسَّرْتَهُ لَنَا مِنَ الْحَسَنَاتِ وَوَفَّقْتَنَا لَهُ مِنَ الْقُرُبَاتِ فَنَسْأَلُكَ اللَّهُمَّ أَنْ تَجْعَلَ لَهُمْ مِنْهَا حَظًّا وَنَصِيْبًا وَمَا اقْتَرَفْنَاهُ مِنَ السَّيِّئَاتِ وَاكْتَسَبْنَاهُ مِنَ الْخَطِيْئَاتِ وَتَحَمَّلْنَاهُ مِنَ التَّبِعَاتِ فَلَا تُلْحِقْهُمْ مِنَّا بِذَلِكَ حُبًّا وَلَا تَحْمِلْ عَلَيْهِمْ مِنْ ذُنُوْبِنَا ذُنُوْبًا. اللَّهُمَّ وَكَمَا سَرَّرْتَهُمْ بِنَا فِيْ الْحَيَاةِ فَسُرَّهُمْ بِنَا بَعْدَ الْوَفَاةِ اللَّهُمَّ وَلَا تُبَلِّغْهُمْ مِنْ أَخْبَارِنَا مَا يَسُوْءُهُمْ وَلَا تُحَمِّلْهُمْ مِنْ أَوْزَارِنَا مَا يَنُوْءُهُمْ وَلَا تُخْزِهِمْ بِنَا فِيْ عَسْكَرِ الْأَمْوَاتِ بِمَا نُحْدِثُ مِنَ الْمُخْزِيَاتِ وَنَأْتِيْ مِنَ الْمُنْكَرَاتِ وَسُرَّ أَرْوَاحَهُمْ بِأَعْمَالِنَا فِيْ مُلْتَقَى الْأَرْوَاحِ إِذَا سُرَّ أَهْلُ الصَّلَاحِ بِأَبْنَاءِ الصَّلَاحِ وَلَا تُوَقِّفْهُمْ مَنَّا عَلَى مَوْقِفِ الْإِفْتِضَاحِ بِمَا نَجْتَرِحُ مِنْ سُوْءِ الْإِجْتِرَاحِ. اللَّهُمَّ وَمَا تَلَوْنَاهُ مِنْ تِلَاوَةٍ فَزَكَّيْتَهَا وَمَا صَلَّيْنَاهُ مِنْ صَلَاةٍ فَتَقَبَّلْتَهَا وَعَمِلْنَا مِنْ أَعْمَالٍ صَالِحَةٍ فَرَضِيْتَهَا وَمَا تَصَدَّقْنَا مِنْ صَدَقَةٍ فَنَمَّيْتَهَا فَنَسْأَلُكَ اللَّهُمَّ أَنْ تَجْعَلَ حَظَّهُمْ مِنْهَا أَكْبَرَ مِنْ حُظُوْظِنَا وَقِسْمَهُمْ مِنْهَا أَجْزَلَ مِنْ أَقْسَامِنَا وَسَهْمَهُمْ مِنْ ثَوَابِهَا أَوْفَرَ مِنْ سِهَامِنَا فَإِنَّكَ أَوْصَيْتَنَا بِبِرِّهِمْ وَنَدَبْتَنَا إِلَى شُكْرِهِمْ فَأَنْتَ أَوْلَى بِالْبِرِّ مِنَ الْبَارِّيْنَ وَأَحَقُّ بِالْوَصْلِ مِنَ الْمَأْمُوْرِيْنَ. اللَّهُمَّ اجْعَلْنَا لَهُمْ قُرَّةَ أَعْيُنٍ يَوْمَ يَقُوْمُ الْأَشْهَادُ وَأَسْمِعْهُمْ مِنَّا أَطْيَبَ النِّدَاءِ يَوْمَ التَّنَادِ وَاجْعَلْهُمْ مِنْ أَغْبَطِ الْآبَاءِ بِالْأَوْلَادِ حَتَّى تَجْمَعَنَا وَإِيَّاهُمْ وَالْمُسْلِمِيْنَ جَمِيْعًا فِيْ دَارِ كَرَامَتِكَ وَمُسْتَقَرِّ رَحْمَتِكَ وَمَحَلِّ أَوْلِيَائِكَ مَعَ الَّذِيْنَ أَنْعَمْتَ عَلَيْهِمْ مِنَ النَّبِيِّيْنَ وَالصِّدِّيْقِيْنَ وَالشُّهَدَاءِ وَالصَّالِحِيْنَ وَحَسُنَ أُوْلَئِكَ رَفِيْقًا ذَلِكَ الْفَضْلُ مِنَ اللَّهِ وَكَفَى بِاللَّهِ عَلِيْمًا وَصَلَّى اللَّهُ عَلَى سَيِّدِنَا مُحَمَّدٍ وَآلِهِ وَصَحْبِهِ وَسَلَّمَ وَالْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِيْنَ آمِيْنَ</string>
    <string name="b_doa_yasin">الْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِينَ حَمْدًا يُوَافِي نِعَمَهُ وَيُكَافِئُ مَزِيدَهُ يَا رَبَّنَا لَكَ الْحَمْدُ كَمَا يَنْبَغِي لِجَلالِ وَجْهِكَ الْكَرِيمِ وَعَظِيمِ سُلْطَانِكَ اللَّهُمَّ صَلِّ وَسَلَّمْ عَلَى سَيِّدِنَا مُحَمَّدٍ وَعَلَى آلِهِ وَصَحْبِهِ أَجْمَعِينَ :: اللَّهُمَّ بِحَقِّ يَس وَالْقُرْآنِ الْحَكِيمِ وَبِمَنِ اخْتَرْتَهُ لِلرِّسَالَةِ وَالنُّبُوَّةِ وَالْوِلَايَةِ وَالْهِدَايَةِ إِلَى الصِّرَاطِ الْمُسْتَقِيمِ وَبِجَمِيعِ مَا جَاءَ بِهِ مِنْكَ جِبْرِيلُ تَنْزِيلَ الْعَزِيزِ الرَّحِيمِ وَبِخَوَّاصِ الْحُرُوفِ وَالْأَسْمَاءِ التَّامَّاتِ وَبِمَا أَظْهَرْتَ فِي الْوُجُودِ لِكُلِّ مُوْجُودٍ مِنَ الْآيَاتِ الْبَيِّنَاتِ وَبِخَفِي لُطْفِكَ الْمُفَرِّجَ عَنْ كُلِّ مَهْمُوْمِ الْمُخَلِصِ لِكُلِّ مَدْيُونٍ يَا مُجْرِيَ الْبِحَارِ وَالْعُيُونِ يَا مَنْ خَزَائِنُهُ بَيْنَ الْكَافِ وَالنُّوْنِ وَعَلِمَ بِمَا كَانَ قَبْلَ أَنْ يَكُوْنَ :: نَسْأَلُكَ اللَّهُمَّ أَنْ تَسْلُكَ بِنَا جَادَّةَ رِضَاكَ وَأَنْ تَجْعَلَنَا أَهْلاً وَمَحَلاً لِسَعَادَتِكَ وَغِنَاكَ وَأَنْ تُيَسِّرَ لَنَا جَمِيعَ الْمُرَادَاتِ وَالْمَطَالِبِ وَأَنْ تَجْعَلَ رِضَاكَ عَنَّا خَيْرَ مُصَاحِبِ لَنَا وَرَفِيقٍ وَأَنْ تُتْحِفَنَا بِالْجَلالَةِ وَالْمَهَابَةِ وَأَنْ تَمُنَّ عَلَيْنَا بِسُرْعَةِ الْإِجَابَةِ اسْتَجِبِ اللَّهُمَّ دُعَاءَنَا وَحَقِّقْ فِيْكَ رَجَاءَنَا وَأَدْخِلْنَا فِي حِرْزِ لُطْفِكَ الْمَصُوْنِ بِسِرِّ قَوْلِكَ : إِنَّمَا أَمْرُهُ إِذَا أَرَادَ شَيْئًا أَنْ يَقُولَ لَهُ كُنْ فَيَكُوْنُ فَسُبْحَانَ الَّذِي بِيَدِهِ مَلَكُوتُ كُلِّ شَيْءٍ وَإِلَيْهِ تُرْجَعُوْنَ. سُبْحَانَ الْمُنَفِّسِ عَنْ كُلِّ مَهْمُوْمٍ سُبْحَانَ الْمُنَفِّسِ عَنْ كُلِّ مَغْمُوْمٍ سُبْحَانَ الْمُنَفِّسِ عَنْ كُلِّ مَدْيُونٍ سُبْحَانَ مَنْ أَمْرُهُ إِذَا أَرَادَ شَيْئًا أَنْ يَقُولَ لَهُ كُنْ فَيَكُوْنُ :: يَا مُفَرِّجَ الْهُمُوْمِ يَا مُفَرِّجُ فَرِّجْ يَا مُفَرِّجُ فَرِّجْ فَرِّجْ عَنَّا هُمُوْمَنَا يَا حَيُّ يَا قَيُّوْمُ يَا ذَا الْجَلالِ وَالْإِكْرَامِ :: وَصَلَّى اللَّهُ عَلَى سَيِّدِنَا مُحَمَّدٍ وَعَلَى آلِهِ وَصَحْبِهِ وَسَلَّمَ وَالْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِينَ.</string>
    <string name="semua_menu">Semua Menu</string>
    <string name="sab_ul_munjiyat">Sab\'ul Munjiyat</string>
    <string name="dalailul_khoirot">Dalailul Khoirot</string>
</resources>