<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ic_tawassul"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:src="@drawable/ic_tawassul"
        app:layout_constraintEnd_toStartOf="@+id/ic_yasin_tahlil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tawassul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/tawassul"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/ic_tawassul"
        app:layout_constraintStart_toStartOf="@+id/ic_tawassul"
        app:layout_constraintTop_toBottomOf="@+id/ic_tawassul" />

    <ImageView
        android:id="@+id/ic_yasin_tahlil"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_yasin_tahlil"
        app:layout_constraintEnd_toStartOf="@+id/ic_waqiah"
        app:layout_constraintStart_toEndOf="@id/ic_tawassul"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yasin_tahlil"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="@+id/ic_yasin_tahlil"
        app:layout_constraintStart_toStartOf="@+id/ic_yasin_tahlil"
        app:layout_constraintTop_toBottomOf="@+id/ic_yasin_tahlil" />

    <ImageView
        android:id="@+id/ic_waqiah"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_waqiah"
        app:layout_constraintEnd_toStartOf="@+id/ic_birrul_walidain"
        app:layout_constraintStart_toEndOf="@id/ic_yasin_tahlil"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/al_waqiah"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="@+id/ic_waqiah"
        app:layout_constraintStart_toStartOf="@+id/ic_waqiah"
        app:layout_constraintTop_toBottomOf="@+id/ic_waqiah" />

    <ImageView
        android:id="@+id/ic_birrul_walidain"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_birrul_walidain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ic_waqiah"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birrul_walidain"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="@+id/ic_birrul_walidain"
        app:layout_constraintStart_toStartOf="@+id/ic_birrul_walidain"
        app:layout_constraintTop_toBottomOf="@+id/ic_birrul_walidain" />

    <ImageView
        android:id="@+id/ic_istighosah"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_istighosah"
        app:layout_constraintEnd_toStartOf="@+id/ic_burdah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tawassul" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/isitghosah"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/ic_istighosah"
        app:layout_constraintStart_toStartOf="@+id/ic_istighosah"
        app:layout_constraintTop_toBottomOf="@+id/ic_istighosah" />

    <ImageView
        android:id="@+id/ic_burdah"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_burdah"
        app:layout_constraintBottom_toBottomOf="@+id/ic_istighosah"
        app:layout_constraintEnd_toStartOf="@+id/ic_diba"
        app:layout_constraintStart_toEndOf="@+id/ic_istighosah"
        app:layout_constraintTop_toTopOf="@+id/ic_istighosah" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/qasidah_burdah"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/ic_burdah"
        app:layout_constraintStart_toStartOf="@+id/ic_burdah"
        app:layout_constraintTop_toBottomOf="@+id/ic_burdah" />

    <ImageView
        android:id="@+id/ic_diba"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_diba"
        app:layout_constraintBottom_toBottomOf="@+id/ic_burdah"
        app:layout_constraintEnd_toStartOf="@+id/ic_lainnya"
        app:layout_constraintStart_toEndOf="@+id/ic_burdah"
        app:layout_constraintTop_toTopOf="@+id/ic_burdah" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/maulid_diba"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/ic_diba"
        app:layout_constraintStart_toStartOf="@+id/ic_diba"
        app:layout_constraintTop_toBottomOf="@+id/ic_diba" />

    <ImageView
        android:id="@+id/ic_lainnya"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_lainnya"
        app:layout_constraintBottom_toBottomOf="@+id/ic_diba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_diba"
        app:layout_constraintTop_toTopOf="@+id/ic_diba" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/lainnya"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/ic_lainnya"
        app:layout_constraintStart_toStartOf="@+id/ic_lainnya"
        app:layout_constraintTop_toBottomOf="@+id/ic_lainnya" />







</androidx.constraintlayout.widget.ConstraintLayout>